--- a/src/app/baner/baner.component.html
+++ b/src/app/baner/baner.component.html
@@ -1,4 +1,16 @@
 <div class="container">
+
+    <section class="wrapper">
+        <div id="stars">aaaaaaa</div>
+        <div id="stars2"></div>
+        <div id="stars3"></div>
+        <div id="title">
+            <span>pure css</span>
+            <br>
+            <span>Paralax pixel</span>
+            </div>
+        </section>
+
     <div class="title">
         <span><h6>Digão</h6></span>
         <br>
@@ -8,8 +20,9 @@
         <span>
             <span>Olá Seja bem-vindo(a),</span><br> 
         </span>Eu sou<br>
-        <span>Rodrigo Gomes</span><br>
-        <span>PHP Developer </span>
+       <span>Rodrigo Gomes</span><br>
+        <span>$echo PHP Developer</span>
+
    
     </div>
 </div>
