--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,10 +1,12 @@
 <div class="container">
-    <h1>Educação</h1>
+    <h1>Cursos</h1>
 
     <section *ngFor="let education of educationList">
-        <h2>{{education.course}}</h2>
+        <br>      
+        <h2>{{education.course}}</h2>      
         <h3>{{education.institute}}</h3>
         <h2>{{education.duration}}</h2>
         <h3>{{education.score}}</h3>
+        <br>  
     </section>
 </div>
